# riscv-emulator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
lib/cli/: Cargo.toml
lib/cli/src/: main.rs
script/: instr-encoder.sh
src/: alu.rs  decode.rs  emulator.rs  instruction.rs  lib.rs  memory.rs  op.rs  processor.rs  register.rs
test/test-files/: addi-be  addi-le  and  andi  auipc  beq-false  beq-true  bge-false  bge-true  bgeu-false  bgeu-true  blt-false  blt-true  bltu-false  bltu-true  bne-false  bne-true  jal  jalr  lui  or  ori  sll  slli  slt-false  slt-true  slti-false  slti-true  sltiu-false  sltiu-true  sltu-false  sltu-true  sra  srai  srl  srli  sub  xor  xori
